EXM-47674 Fixed tests and test catched situations.